# mediainfo-generator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  README.md  pyproject.toml
.github/workflows/: python-package.yml
docker/: Dockerfile  Dockerfile.dev  docker-build.sh  docker-compose.yaml  docker-entrypoint.sh  docker-run.sh
scripts/: git-increment-version.sh
src/: generate-mediainfo.sh  process.sh  summarize-mediainfo.sh
src/legacy/: generate-mediainfo.sh  process.sh  summarize-mediainfo.sh
src/mediainfo_generator/: __init__.py  logging.yaml
src/mediainfo_generator/utils/: cli_args.py  logging_utils.py  media_utils.py  settings_utils_v1.py
